rhai/codegen/ui_tests/rhai_fn_getter_multiple.stderr
error: conflicting getter
  --> $DIR/rhai_fn_getter_multiple.rs:12:42
   |
12 |     #[rhai_fn(name = "foo", get = "foo", get = "bar")]
   |                                          ^^^^^^^^^^^

error[E0433]: failed to resolve: use of undeclared crate or module `test_module`
  --> $DIR/rhai_fn_getter_multiple.rs:23:8
   |
23 |     if test_module::test_fn(n) {
   |        ^^^^^^^^^^^ use of undeclared crate or module `test_module`
